--- a/home.css
+++ b/home.css
@@ -3,24 +3,9 @@ body {
     color: #e4f1fe;
 }
 
-.top-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
 .navbar, bg-body-tertiary, fixed-top {
     display: flex;
     flex-direction: row;
-}
-
-.main-nav {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding-right: 100px;
 }
 
 .main-nav, .btn, btn-secondary {
@@ -31,9 +16,16 @@ body {
 .btn, btn-secondary {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    align-items: flex-end;
     margin-top: 60px;
+    margin-left: 5px;
     background-color: #50717b;
+    border: none;
+}
+
+.btn:hover {
+    background-color: #415d65;
 }
 
 .navbar-brand {
@@ -47,6 +39,9 @@ body {
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border-radius: 10px;
     background-color: #50717b;
     color: rgb(255, 255, 255);
@@ -70,13 +65,26 @@ body {
     margin-top: 0;
 }
 
+#temp-degree {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+#degree {
+    text-align: end;
+    font-size: large;
+    font-weight: 500;
+}
+
 #current-condition {
     color: rgb(255, 255, 255);
     font-size: 30px;
     font-weight: 500;
     text-align: center;
     margin-bottom: 0;
-    margin-top: 30px;
+    margin-top: 0px;
 }
 
 #weather-alert {
@@ -93,7 +101,7 @@ body {
     font-size: 20px;
     font-weight: 500;
     text-align: center;
-    margin-top: 45px;
+    margin-top: 35px;
 }
 
 .my-chart {
